# dvc-dag

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  LICENSE  Makefile  README.md  dvc.yaml  prek.toml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
docs/: releasing.md
dvc_pipelines/model/: dvc.yaml
scripts/: check_changelog.py  check_release_metadata.py  sync_demo_dag.py
src/dvc_dag/: __init__.py  __main__.py  cli.py  colors.py  draw.py  logger.py
tests/: conftest.py  test_check_changelog.py  test_check_release_metadata.py  test_cli_e2e.py  test_dag_e2e.py  test_docs.py  test_draw_helpers.py  test_draw_runtime_errors.py  test_draw_transformations.py  test_fixture_status.py  test_package_artifacts.py  test_packaging.py  test_placeholder.py
tests/dvc_pipelines/nested/: data.py  features.py  model.py
tests/dvc_pipelines/root/: data.py  features.py  model.py
tests/dvc_pipelines/root/files/: alone_file.json.dvc  blue.json  hyperparameters.json
tests/fixtures/dvc_project/: dvc.yaml
tests/fixtures/dvc_project/data/: .gitignore  analytics_base.json  baseline_model.json  candidate_model-gradient_boosting.json  candidate_model-linear.json  candidate_model-random_forest.json  evaluation_report.json  feature_matrix.json  hyperparameters.json  listings.json  listings_normalized.json  listings_raw.json.dvc  location_features.json  market_comps.json  market_comps_normalized.json  market_comps_raw.json.dvc  market_context.json  model_card.json  neighborhood_profiles.json  neighborhood_profiles_raw.json.dvc  property_features.json
tests/fixtures/dvc_project/pipelines/: evaluation.py  features.py  ingestion.py  preprocessing.py  training.py
tests/fixtures/dvc_project/pipelines/nested/: data.py  model.py
tests/fixtures/dvc_project/pipelines/nested/data/: dataset.json  red.json  unrelated.json
tests/fixtures/dvc_project/pipelines/root/: model.py
tests/fixtures/dvc_project/stages/data/: dvc.yaml
tests/fixtures/dvc_project/stages/features/: dvc.yaml
tests/fixtures/dvc_project/stages/model/: dvc.yaml
tests/fixtures/dvc_workspace/: dvc.yaml
tests/fixtures/dvc_workspace/dvc_pipelines/data/: dvc.yaml
tests/fixtures/dvc_workspace/dvc_pipelines/features/: dvc.yaml
tests/fixtures/dvc_workspace/dvc_pipelines/model/: dvc.yaml
tests/fixtures/dvc_workspace/pipelines/nested/: data.py  features.py  model.py
tests/fixtures/dvc_workspace/pipelines/nested/files/: model-full.json  raw_blue.json.dvc
tests/fixtures/dvc_workspace/pipelines/root/: data.py  features.py  model.py
tests/fixtures/dvc_workspace/tests/dvc_pipelines/nested/: data.py  model.py
tests/fixtures/dvc_workspace/tests/dvc_pipelines/nested/files/: .gitignore  raw_red.json.dvc
tests/fixtures/dvc_workspace/tests/dvc_pipelines/root/: data.py  features.py  model.py
