[project]
name = "dvc-dag"
version = "1.0.0"
description = "Generate a clear diagram of your DVC pipeline."
readme = "README.md"
authors = [{ name = "Andrea Vidali", email = "andreavidali.me@gmail.com" }]
maintainers = [{ name = "Andrea Vidali", email = "andreavidali.me@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["dvc", "dag", "graphviz", "pipeline", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "dvc>=3",
  "pydot>=3.0.4",
  "rich>=13.9.4",
  "typer>=0.24.1",
  "webcolors>=24.11.1",
]

[dependency-groups]
dev = [
  "deptry>=0.23.0",
  "ipython>=8.31.0",
  "pdbpp>=0.10.3",
  "pre-commit>=4.2.0",
  "pytest>=8.3.4",
  "ruff>=0.9.4",
  "ty>=0.0.26",
  "uv-sort>=0.6.0",
]

[project.scripts]
dvc-dag = "dvc_dag.cli:app"

[project.urls]
Homepage = "https://github.com/AndreaVidali/dvc-dag"
Repository = "https://github.com/AndreaVidali/dvc-dag"
Issues = "https://github.com/AndreaVidali/dvc-dag/issues"
Changelog = "https://github.com/AndreaVidali/dvc-dag/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true

[tool.hatch.build.targets.sdist]
only-include = [
  "src/dvc_dag",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "pyproject.toml",
  "docs/dvc_dag.png",
]
exclude = [
  "*.gitignore",
  "**/.gitignore",
  ".gitignore",
  ".github",
  ".prettierignore",
  ".python-version",
  "Makefile",
  "tests",
  "uv.lock",
  "/.gitignore",
  "/.github",
  "/.prettierignore",
  "/.python-version",
  "/Makefile",
  "/tests",
  "/uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dvc_dag"]

[tool.ruff]
line-length = 99
target-version = "py310"
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "G004",   # logging-f-string
  "COM812", # missing-trailing-comma (conflicting lint rule)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1
known-first-party = ["dvc_dag"]

[tool.ruff.lint.per-file-ignores]
"**/test**.py" = [
  "S101",    # use of `assert`
  "PLR2004", # magic value in comparison
  "INP001",  # implicit-namespace-package
  "ANN",     # flake8-annotations
]

[tool.ty.terminal]
output-format = "concise"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:'setParseAction' deprecated - use 'set_parse_action':DeprecationWarning",
]

[tool.deptry]
known_first_party = ["dvc_dag"]

[tool.deptry.per_rule_ignores]
DEP002 = [
  "dvc", # used for testing
]
